force-app/main/default/objects/Food_Details__c/Food_Details__c.object-meta.xml
<CustomObject>
    <label>Food Details</label>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Food Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>