force-app/main/default/objects/Food_Details__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Food Detail</relationshipLabel>
    <relationshipName>Food_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>