force-app/main/default/objects/Food_Details__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <inlineHelpText>Total Payment made for the Food in this travel.</inlineHelpText>
    <label>Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>