force-app/main/default/objects/Food_Details__c/fields/Date_of_submission__c.field-meta.xml
<CustomField>
    <fullName>Date_of_submission__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Date of submission</label>
    <type>DateTime</type>
</CustomField>