force-app/main/default/objects/Food_Details__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <inlineHelpText>Reason of travelling</inlineHelpText>
    <label>Purpose</label>
    <type>TextArea</type>
</CustomField>