force-app/main/default/objects/Food_Details__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>If your Reimbursement has beed approved it will be shown as &quot;Approved&quot;, If its rejected it will be shown as &quot;Rejected&quot; , If its pending it will be shown as &quot;Waiting for approval</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting for approval</fullName>
                <default>true</default>
                <label>Waiting for approval</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>