force-app/main/default/objects/Food_Details__c/fields/Travel_Date_from__c.field-meta.xml
<CustomField>
    <fullName>Travel_Date_from__c</fullName>
    <label>Travel Date from</label>
    <type>DateTime</type>
</CustomField>