force-app/main/default/objects/Food_Details__c/fields/Travel_Date_to__c.field-meta.xml
<CustomField>
    <fullName>Travel_Date_to__c</fullName>
    <label>Travel Date to</label>
    <type>DateTime</type>
</CustomField>